<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:gravity="center">
    <TextView
            android:id="@+id/friend"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share2friend"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/image_share2wx"
            android:gravity="center"/>
    <TextView
            android:id="@+id/circle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share2circle"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/image_share2pyq"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    <TextView
            android:id="@+id/qq"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share2qq"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/image_share2qq"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    <TextView
            android:id="@+id/qqkj"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share2qqkj"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/image_share2qqkj"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    <TextView
            android:id="@+id/wb"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/share2wb"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/image_share2wb"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    <TextView
            android:id="@+id/txt_msg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/my_message"
            android:background="@android:color/black"
            android:drawableLeft="@drawable/image_message"
            android:textColor="@android:color/white"
            android:gravity="center"/>

        <TextView
                android:id="@+id/back"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/back"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:gravity="center"/>

</LinearLayout>